--- a/miniblog/src/index.css
+++ b/miniblog/src/index.css
@@ -1,13 +1,117 @@
 body {
+  background: #F6FCFF;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input::placeholder,
+textarea::placeholder {
+  font-family: "Montserrat", sans-serif;
+  color: #AAA;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+}
+
+a,
+nav button {
+  text-decoration: none;
+  background: transparent;
+  border: none;
+  color: #000;
+  transition: 0.4s;
+  font-size: 1Rem;
+  cursor: pointer;
+  font-family: "Montserrat", sans-seri;
+}
+
+a:hover,
+nav button:hover {
+  color: #BBB;
+}
+
+/* form styles */
+form {
+  max-width: 40%;
+  margin: 0 auto;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+label span {
+  margin-bottom: 0.3rem;
+  font-weight: bold;
+  text-align: left;
+}
+
+input,
+textarea {
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid #CCC;
+  padding: 0.8rem 0;
+  background: transparent;
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: #AAA;
+}
+
+.btn {
+  background-color: #1A8918;
+  color: #FFF;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 10px;
+  width: 120px;
+  font-weight: bold;
+  border: none;
+  padding: 10px 15px;
+  font-size: 1rem;
+}
+
+.btn.btn-dark {
+  background-color: #000;
+  border-radius: 0;
+}
+
+.btn.btn-outline {
+  background-color: transparent;
+  border-radius: 0;
+  color: #000;
+  border: 1px solid #000;
+  padding: 7px 30px;
+}
+
+.btn:hover {
+  background: #0F730C;
+  color: #FFF;
+}
+
+.btn.btn-outline:hover {
+  background: #000;
+}
+
+.btn.btn-danger:hover {
+  background: #DC3545;
+}
+
+button[disabled] {
+  background: #AAA;
+}
+
+.container .error {
+  color: #721c24;
+  background: #f8D7DA;
+  border: 1px solid #F5C6CB;
+  padding: 5px;
+  border-radius: 5px;
 }
