--- a/miniblog/src/pages/CreatePost/CreatePost.module.css
+++ b/miniblog/src/pages/CreatePost/CreatePost.module.css
@@ -4,10 +4,10 @@
 }
 
 .create_post h2 {
-  font-size: 2.2em;
+  font-size: 2.2rem;
 }
 
 .create_post p {
-  color: #aaa;
-  margin-bottom: 2em;
+  color: #AAA;
+  margin-bottom: 2rem;
 }
