--- a/miniblog/src/components/PostDetail/PostDetail.module.css
+++ b/miniblog/src/components/PostDetail/PostDetail.module.css
@@ -1,5 +1,7 @@
 .post_detail {
-  margin-bottom: 2em;
+  margin-bottom: 2rem;
+  width: 100%;
+  max-width: 600px;
 }
 
 .post_detail img {
@@ -7,16 +9,16 @@
 }
 
 .post_detail h2 {
-  margin-bottom: 0.4em;
+  margin-bottom: 0.4rem;
 }
 
 .post_detail .tags {
-  margin-bottom: 1.2em;
+  margin-bottom: 1.2rem;
   display: flex;
 }
 
 .tags p {
-  margin-right: 0.5em;
+  margin-right: 0.5rem;
 }
 
 .tags span {
@@ -26,6 +28,6 @@
 .createdby {
   font-style: italic;
   color: #444;
-  font-size: 0.8em;
-  margin-bottom: 1em;
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
 }
