--- a/miniblog/src/index.css
+++ b/miniblog/src/index.css
@@ -66,38 +66,43 @@ textarea::placeholder {
 }
 
 .btn {
-  background-color: #1A8918;
-  color: #FFF;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 10px;
-  width: 120px;
-  font-weight: bold;
   border: none;
-  padding: 10px 15px;
-  font-size: 1rem;
+  color: #FFF;
+  font-weight: 700;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 10px 0px;
+}
+
+.btn.btn-primary {
+  background: #2dc02d;
 }
 
 .btn.btn-dark {
-  background-color: #000;
-  border-radius: 0;
+  background: #000;
 }
 
 .btn.btn-outline {
-  background-color: transparent;
-  border-radius: 0;
+  background: transparent;
   color: #000;
   border: 1px solid #000;
-  padding: 7px 30px;
 }
 
-.btn:hover {
+.btn.btn.btn-primary:hover {
   background: #0F730C;
-  color: #FFF;
 }
 
 .btn.btn-outline:hover {
   background: #000;
+  color: #FFF;
+}
+
+.btn.btn-danger {
+  background: #ca0b0b;
+  border: none;
+  color: #FFF;
 }
 
 .btn.btn-danger:hover {
